Disable work animation

--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "build:watch": "rollup -c -w",
     "dev": "rollup -c -w",
-    "release:patch": "npm version patch && npm run build && git add -A && git commit -m \"Build v%npm_package_version%\" && git push && git push --tags",
-    "release:minor": "npm version minor && npm run build && git add -A && git commit -m \"Build v%npm_package_version%\" && git push && git push --tags",
-    "release:major": "npm version major && npm run build && git add -A && git commit -m \"Build v%npm_package_version%\" && git push && git push --tags"
+    "release:patch": "node scripts/release.js patch",
+    "release:minor": "node scripts/release.js minor",
+    "release:major": "node scripts/release.js major"
   },
   "keywords": [
     "gsap",
